--- a/p5.ipynb
+++ b/p5.ipynb
@@ -677,55 +677,17 @@
     "    print(\"Reconstruction loss: \", loss)\n",
     "    return pca_data, recon_X\n",
     "\n",
-    "# def pca_dro(X, d):\n",
-    "#     # Compute mean and center the data\n",
-    "#     mean_X = np.mean(X, axis=0)\n",
-    "#     Y = X - mean_X\n",
-    "    \n",
-    "#     # Compute covariance matrix\n",
-    "#     cov_matrix = np.dot(Y.T, Y) / len(X)\n",
-    "    \n",
-    "#     # Perform SVD\n",
-    "#     U, Sigma, Vt = np.linalg.svd(cov_matrix)\n",
-    "    \n",
-    "#     # Truncate SVD to d dimensions\n",
-    "#     U_d = U[:, :d]\n",
-    "#     Sigma_d = np.diag(Sigma[:d])\n",
-    "#     Vt_d = Vt[:d, :]\n",
-    "    \n",
-    "#     # Compute A and Z\n",
-    "#     A = np.dot(U_d, np.sqrt(Sigma_d))\n",
-    "#     Z = np.dot(Y, Vt_d.T)\n",
-    "    \n",
-    "#     # Reconstruct data\n",
-    "#     X_hat = np.dot(Z, A.T) + mean_X\n",
-    "    \n",
-    "#     # Compute reconstruction error\n",
-    "#     reconstruction_error = np.linalg.norm(X - X_hat, ord='fro') / np.linalg.norm(X, ord='fro')\n",
-    "#     print(\"Reconstruction loss: \", reconstruction_error)\n",
-    "#     return reconstruction_error, X_hat\n",
-    "\n",
     "def pca_dro(X, d):\n",
     "    # Compute mean and center the data\n",
     "    mean_X = np.mean(X, axis=0)\n",
-    "    Y = X - mean_X\n",
-    "    \n",
-    "    # Compute covariance matrix\n",
+    "    Y = X - mean_X # Compute covariance matrix\n",
     "    cov_matrix = np.dot(Y.T, Y) / len(X)\n",
-    "    \n",
-    "    # Perform SVD\n",
-    "    U, Sigma, Vt = np.linalg.svd(cov_matrix)\n",
-    "    \n",
-    "    # Truncate SVD to d dimensions\n",
-    "    U_d = U[:, :d]\n",
-    "    \n",
+    "    U, Sigma, Vt = np.linalg.svd(cov_matrix) # Perform SVD\n",
+    "    U_d = U[:, :d] # Truncate SVD to d dimensions\n",
     "    # Compute projection matrix and transformed data\n",
     "    projection_matrix = U_d\n",
     "    X_d = np.dot(Y, projection_matrix)\n",
-    "    \n",
-    "    # Reconstruct data\n",
-    "    X_hat = np.dot(X_d, projection_matrix.T) + mean_X\n",
-    "    \n",
+    "    X_hat = np.dot(X_d, projection_matrix.T) + mean_X # Reconstruct data\n",
     "    # Compute reconstruction error\n",
     "    reconstruction_error = np.linalg.norm(X - X_hat, ord='fro') / np.linalg.norm(X, ord='fro')\n",
     "    print(\"Reconstruction loss: \", reconstruction_error)\n",
